methods.slug.SlugSnail.scala.error
Erreur de compilation :
SlugSnail:11: error: not enough arguments for method isFacingTrail: (c: java.awt.Color)Boolean.
Unspecified value parameter c.
  else{droite();if (isFacingTrail()) {avance();marque()}
                                 ^